--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "^7.1",
-        "phpunit/phpunit": "^9.5.8"
+        "phpunit/phpunit": "^9.5.8",
+        "vimeo/psalm": "5.x-dev"
     },
     "minimum-stability": "dev",
     "autoload": {
